feat: pokemon audio playback

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 
 	<div class="pokemonImage">
 
-		
+
         <img src="" alt="The image or sprite of the Pokemon you encountered!"/>
 
 
@@ -19,6 +19,12 @@
     <div class="pokemonName"></div>
     <div class="pokemonType1"></div>
     <div class="pokemonType2"></div>
+
+	<button class="pokemonCry">
+		<audio src=""></audio>
+		Pokemon Cry
+	</button>
+
 
     <button id="create-encounter">Encounter a Pokemon!</button>
 
