feat: html for team in place

--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,12 @@
 
     <button id="create-encounter">Encounter a Pokemon!</button>
 
+
+	<button id="create-team">Create a team</button>
+	<section id="team-display">
+
+	</section>
+
 	<script src="./pokemonApi.js">
 
 	</script>
